--- a/app/src/main/res/layout/ordering_assistance.xml
+++ b/app/src/main/res/layout/ordering_assistance.xml
@@ -7,21 +7,21 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView71"
+        android:id="@+id/tvCOARequestType"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Change Grill"
-        app:layout_constraintEnd_toStartOf="@+id/textView73"
+        app:layout_constraintEnd_toStartOf="@+id/tvCOARequestTime"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView73"
+        android:id="@+id/tvCOARequestTime"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="10:30 AM"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView71"
+        app:layout_constraintTop_toTopOf="@+id/tvCOARequestType"
         tools:layout_editor_absoluteY="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
