--- a/app/src/main/res/layout/ordering_bill.xml
+++ b/app/src/main/res/layout/ordering_bill.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/tvCBillFoodName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -13,6 +14,7 @@
         android:textColor="@color/black" />
 
     <TextView
+        android:id="@+id/tvCBillFoodQuantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -22,6 +24,7 @@
         android:textColor="@color/black" />
 
     <TextView
+        android:id="@+id/tvCBillFoodPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1.2"
