--- a/app/src/main/res/layout/activity_gcash_checkout.xml
+++ b/app/src/main/res/layout/activity_gcash_checkout.xml
@@ -72,7 +72,7 @@
                 app:cardElevation="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout21">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -81,7 +81,7 @@
                     android:paddingBottom="20dp">
 
                     <ImageView
-                        android:id="@+id/imageView11"
+                        android:id="@+id/ivCOGCCImage"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
@@ -93,15 +93,15 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <Button
-                        android:id="@+id/button6"
+                        android:id="@+id/btnCOGCCDownloadQr"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
-                        android:textAllCaps="false"
                         android:text="Download QR Code"
+                        android:textAllCaps="false"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
+                        app:layout_constraintTop_toBottomOf="@+id/ivCOGCCImage" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -136,20 +136,21 @@
                         android:text="Upload Gcash Receipt"
                         android:textColor="@color/black"
                         android:textSize="20sp"
+                        android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/imageView12"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/btnCOGCCUploadImage"
+                        android:layout_width="250dp"
+                        android:layout_height="250dp"
                         android:layout_marginTop="30dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.496"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView74"
-                        app:srcCompat="@drawable/approve_notif_icon" />
+                        app:srcCompat="@drawable/upload_icon" />
 
                     <Button
                         android:id="@+id/button7"
@@ -160,7 +161,18 @@
                         android:textAllCaps="false"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+                        app:layout_constraintTop_toBottomOf="@+id/btnCOGCCUploadImage" />
+
+                    <TextView
+                        android:id="@+id/tvCOGCCUploadImageLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="60dp"
+                        android:textColor="@color/restaurantAddressTextColor"
+                        android:text="Upload Image Here"
+                        app:layout_constraintBottom_toBottomOf="@+id/btnCOGCCUploadImage"
+                        app:layout_constraintEnd_toEndOf="@+id/btnCOGCCUploadImage"
+                        app:layout_constraintStart_toStartOf="@+id/btnCOGCCUploadImage" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -172,6 +184,74 @@
                 android:background="@color/white"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/sampleId"/>
+
+            <LinearLayout
+                android:id="@+id/linearLayout21"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/tvCOGCCInvalid"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/loginColor"
+                    android:text="Please submit a valid gcash receipt"
+                    android:gravity="center_horizontal" />
+
+                <LinearLayout
+                    android:id="@+id/linearLayout20"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Amount to Pay:"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/tvCOGCCTotalPrice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="3990.00"
+                        android:textAlignment="textEnd"
+                        android:textColor="@color/restaurantAddressTextColor"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.66"
+                        android:fontFamily="@font/montserrat"
+                        android:gravity="center_horizontal"
+                        android:text="Php"
+                        android:textAlignment="center"
+                        android:textColor="@color/sideBarViewColor"
+                        android:textSize="10sp" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
