--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView36"
+            android:id="@+id/tvRRAverageRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -45,19 +45,28 @@
             android:layout_height="wrap_content"
             android:textColor="@color/sideBarViewColor"
             android:text="out of 5"
-            app:layout_constraintEnd_toEndOf="@+id/textView36"
-            app:layout_constraintStart_toStartOf="@+id/textView36"
-            app:layout_constraintTop_toBottomOf="@+id/textView36" />
+            app:layout_constraintEnd_toEndOf="@+id/tvRRAverageRate"
+            app:layout_constraintStart_toStartOf="@+id/tvRRAverageRate"
+            app:layout_constraintTop_toBottomOf="@+id/tvRRAverageRate" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/ratingReviewsRecyclerView"
             android:layout_width="match_parent"
-            android:layout_marginTop="30dp"
-            android:layout_marginHorizontal="20dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView37"/>
+            app:layout_constraintTop_toBottomOf="@+id/tvRRRateCount" />
+
+        <TextView
+            android:id="@+id/tvRRRateCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(72)"
+            app:layout_constraintEnd_toEndOf="@+id/textView37"
+            app:layout_constraintStart_toStartOf="@+id/textView37"
+            app:layout_constraintTop_toBottomOf="@+id/textView37" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
