--- a/app/src/main/res/layout/activity_bd_noshow.xml
+++ b/app/src/main/res/layout/activity_bd_noshow.xml
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/montserrat"
-                    android:text="Date:" />
+                    android:text="Booking Date:" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -148,6 +148,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/llBDNSReserveDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -161,6 +162,49 @@
                     android:background="@color/sideBarViewColor"
                     android:layout_marginVertical="15dp"
                     android:layout_height="1dp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Reserve Date:"/>
+
+                    <TextView
+                        android:id="@+id/tvBDNSReserveDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/black"
+                        android:text="Golden Baboy, Morayta"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llBDNSReserveTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Reserve Time:"/>
+
+                    <TextView
+                        android:id="@+id/tvBDNSReserveTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/black"
+                        android:text="Golden Baboy, Morayta"/>
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
