--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -96,7 +96,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/montserrat"
-                        android:text="Date:" />
+                        android:text="Reserved Date:" />
 
                     <TextView
                         android:id="@+id/tvBookDetailsDate"
@@ -122,7 +122,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/montserrat"
-                        android:text="Time:" />
+                        android:text="Reserved Time:" />
 
                     <TextView
                         android:id="@+id/tvBookDetailsTime"
@@ -409,7 +409,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Service Fee"
+                        android:text="Service Fee (0%)"
                         android:textColor="@color/black" />
 
                     <TextView
@@ -539,7 +539,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Children (free)"
+                        android:text="Children (0%)"
                         android:textColor="@color/black" />
 
                     <TextView
