--- a/app/src/main/res/layout/activity_pending_notification.xml
+++ b/app/src/main/res/layout/activity_pending_notification.xml
@@ -124,6 +124,57 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvPendingHeader2">
 
                 <LinearLayout
+                    android:id="@+id/llPNotifDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/montserrat"
+                        android:text="Reserve Date:" />
+
+                    <TextView
+                        android:id="@+id/tvPNotifDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="399"
+                        android:textAlignment="textEnd"
+                        android:textColor="@color/black" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/llPNotifTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/montserrat"
+                        android:text="Reserve Time:" />
+
+                    <TextView
+                        android:id="@+id/tvPNotifTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="399"
+                        android:textAlignment="textEnd"
+                        android:textColor="@color/black" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
