--- a/app/src/main/res/layout/lists_of_promos.xml
+++ b/app/src/main/res/layout/lists_of_promos.xml
@@ -26,6 +26,8 @@
         <TextView
             android:id="@+id/tvListPromoTitle"
             android:layout_width="0dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_marginRight="30dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -41,6 +43,8 @@
         <TextView
             android:id="@+id/tvListPromoAddress"
             android:layout_width="0dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_height="wrap_content"
             android:text="Padre Noval St., España Ave."
             android:textColor="@color/restaurantAddressTextColor"
@@ -57,9 +61,9 @@
             android:fontFamily="@font/montserrat"
             android:text="June 10, 2021 - July 10, 2021  "
             android:textColor="@color/loginColor"
-            app:layout_constraintBottom_toBottomOf="@+id/ivListPromoRestaurantImage"
             app:layout_constraintEnd_toEndOf="@+id/tvListPromoAddress"
-            app:layout_constraintStart_toStartOf="@+id/tvListPromoAddress" />
+            app:layout_constraintStart_toStartOf="@+id/tvListPromoAddress"
+            app:layout_constraintTop_toBottomOf="@+id/tvListPromoAddress" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
