--- a/app/src/main/res/layout/lists_of_reviews.xml
+++ b/app/src/main/res/layout/lists_of_reviews.xml
@@ -42,7 +42,7 @@
             style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:isIndicator="false"
+            android:isIndicator="true"
             android:layout_marginTop="2dp"
             android:numStars="5"
             android:progressBackgroundTint="@color/starColorNotActive"
